# reconhive

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  code_review.md  docker-compose.yml  pyproject.toml  requirements.txt  run_api.sh
.claude/: CLAUDE.md  settings.local.json
.codex/skills/api-design/: SKILL.md
.codex/skills/backend-dotnet-aspnetcore/: SKILL.md
.codex/skills/backend-dotnet-efcore/: SKILL.md
.codex/skills/backend-python-fastapi/: SKILL.md
app/: config.py
app/api/: __init__.py  app.py  deps.py  job_events.py  schemas.py
app/db/: base.py  models.py  session.py
app/enrich/: __init__.py  factory.py  geoip.py  netclass.py  service.py  tls.py
app/fingerprint/: __init__.py  engine.py  http_probe.py  service.py  signatures.py
app/scan/: __init__.py  ports.py  progress.py  ratelimit.py  runner.py  scanner.py  text.py
app/scope/: __init__.py  exceptions.py  guard.py  service.py
app/search/: __init__.py  compiler.py  exceptions.py  lexer.py  parser.py
db/: schema.sql
docs/: best-practices-matrix.md  skills-index.md  source-notes.md
frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.vue  main.ts
migrations/: env.py
migrations/versions/: 64e435094c0f_initial_schema.py
scripts/: download_geoip_dbs.sh
snippets/: gitignore-baseline.md  verification-commands.md
tests/: test_api.py  test_enrich.py  test_fingerprint.py  test_integration_pg.py  test_job_events.py  test_progress.py  test_scan_text.py  test_scanner.py  test_scope_guard.py  test_search.py
(+31 files in other folders)
