[project]
name = "reconhive"
version = "0.1.0"
description = "Authorized network reconnaissance & search platform (Shodan-style, scoped)"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "alembic>=1.13",
    "pydantic-settings>=2.0",
    "uvicorn[standard]>=0.27",
    "cryptography>=48.0.0",
    "geoip2>=5.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23", "ruff>=0.3", "mypy>=1.9"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 90
target-version = "py311"

[dependency-groups]
dev = [
    "httpx>=0.28.1",
]
